// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addresses should return kovan testnet addresses for networkId 42 1`] = `
Object {
  "B0x": "0x66c529139ea5ff2f4e758c28fed902ef78ddf798",
  "B0xOracle": "0x2f498a9cd5f8a74ed579a95a5ab47f1bf9126bfa",
  "B0xTo0x": "0x3cb5ee86adcf8fc4301354b58fde01535939a3b5",
  "B0xToken": "0x14823db576c11e4a54ca9e01ca0b28b18d3d1187",
  "B0xVault": "0xbe46529e2f3208d35027c809ff1df173b022565d",
  "EIP20": "",
  "OracleInterface": "",
  "OracleRegistry": "0x81558e6edf0f7ae1222fd56ad63cffad09dadf64",
  "TokenRegistry": "0x0dadad008647f0f7b68ffe662135cd714a56698c",
  "TokenTransferProxy": "0x4e9aad8184de8833365fea970cd9149372fdf1e6",
  "WETH": "0xc778417e063141139fce010982780140aa0cd5ab",
  "ZRXToken": "0xa8e9fa8f91e5ae138c74648c9c304f1c75003a8d",
}
`;

exports[`addresses should return local testnet addresses for all other networkIds 1`] = `
Object {
  "B0x": "0x4d3d5c850dd5bd9d6f4adda3dd039a3c8054ca29",
  "B0xOracle": "0xd8ca39d276c05a370174ce872b7278fcf734afac",
  "B0xTo0x": "0x8726c7414ac023d23348326b47af3205185fd035",
  "B0xToken": "0x6346e3a22d2ef8fee3b3c2171367490e52d81c52",
  "B0xVault": "0x6000eca38b8b5bba64986182fe2a69c57f6b5414",
  "EIP20": "",
  "OracleInterface": "",
  "OracleRegistry": "0x7e3f4e1deb8d3a05d9d2da87d9521268d0ec3239",
  "TestToken0": "0x72d5a2213bfe46df9fbda08e22f536ac6ca8907e",
  "TestToken1": "0x2ebb94cc79d7d0f1195300aaf191d118f53292a8",
  "TestToken2": "0x5315e44798395d4a952530d131249fe00f554565",
  "TestToken3": "0xdff540fe764855d3175dcfae9d91ae8aee5c6d6f",
  "TestToken4": "0xc1be2c0bb387aa13d5019a9c518e8bc93cb53360",
  "TestToken5": "0xda54ecf5a234d6cd85ce93a955860834aca75878",
  "TestToken6": "0x33def1aa867be09809f3a01ce41d5ec1888846c9",
  "TestToken7": "0x10a736a7b223f1fe1050264249d1abb975741e75",
  "TestToken8": "0xb125995f5a4766c451cd8c34c4f5cac89b724571",
  "TestToken9": "0xc7124963ab16c33e5bf421d4c0090116622b3074",
  "TokenRegistry": "0xb48e1b16829c7f5bd62b76cb878a6bb1c4625d7a",
}
`;

exports[`addresses should return rinkeby testnet addresses for networkId 4 1`] = `
Object {
  "B0x": "0x66c529139ea5ff2f4e758c28fed902ef78ddf798",
  "B0xOracle": "0x2f498a9cd5f8a74ed579a95a5ab47f1bf9126bfa",
  "B0xTo0x": "0x3cb5ee86adcf8fc4301354b58fde01535939a3b5",
  "B0xToken": "0x14823db576c11e4a54ca9e01ca0b28b18d3d1187",
  "B0xVault": "0xbe46529e2f3208d35027c809ff1df173b022565d",
  "EIP20": "",
  "OracleInterace": "",
  "OracleRegistry": "0x81558e6edf0f7ae1222fd56ad63cffad09dadf64",
  "TokenRegistry": "0x0dadad008647f0f7b68ffe662135cd714a56698c",
  "TokenTransferProxy": "0x4e9aad8184de8833365fea970cd9149372fdf1e6",
  "WETH": "0xc778417e063141139fce010982780140aa0cd5ab",
  "ZRXToken": "0xa8e9fa8f91e5ae138c74648c9c304f1c75003a8d",
}
`;
